Tenemos hasta aqui implementado la actividad principal y el detalle,donde se visualiza los detalles del curso seleccionado.

--- a/res/layout/activity_detalle.xml
+++ b/res/layout/activity_detalle.xml
@@ -6,5 +6,24 @@
               android:layout_height="match_parent">
 
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/idTxtvTitulo" android:layout_gravity="left|center_vertical"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/idTxtvPrecio" android:layout_gravity="left|center_vertical"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/idImgvImagen" android:layout_gravity="left|center_vertical"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/idTxtvDetalle" android:layout_gravity="left|center_vertical"/>
 
 </LinearLayout>
